--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,11 @@
-# Direktori yang TIDAK perlu disalin ke dalam container saat build
-node_modules/
-vendor/
-
-# File penting lainnya yang harus diabaikan saat build
+vendor
+node_modules
+npm-debug.log
+.env
 .git
-.gitignore
-.env 
-.vscode/
+storage/framework/cache/data
+storage/framework/sessions
+storage/framework/testing
+.idea
+.vscode
+.DS_Store
