--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,54 @@
 version: '3.8'
-
 services:
   app:
-    # Service PHP/Apache/Laravel Anda (Backend)
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: laravel-apache
-    ports:
-      - "8000:80"
+    image: frontend-digital-cockpit_app
+    container_name: fdc_app
+    restart: unless-stopped
+    environment:
+      APP_ENV: local
+      APP_DEBUG: 'true'
+      DB_HOST: db
+      DB_PORT: '3306'
+      DB_DATABASE: app
+      DB_USERNAME: root
+      DB_PASSWORD: root
     volumes:
-      # Volume untuk sinkronisasi kode
-      - .:/var/www/html
-      # Tambahkan volume anonim untuk node_modules
-      # agar tidak bentrok dengan instalasi di host
-      - /var/www/html/node_modules
-    env_file:
-      - .env
-    # Service 'app' bergantung pada 'npm' agar proses instalasi
-    # berjalan lebih dulu (opsional, tapi disarankan)
+      - ./:/var/www/html
+      - vendor:/var/www/html/vendor
+      - node_modules:/app/node_modules
     depends_on:
-      - npm
+      - db
 
-  npm:
-    # Service khusus untuk Node.js dan NPM (Frontend)
-    image: node:20-alpine # Gunakan image Node.js yang ringan
-    container_name: npm-runner
-    working_dir: /var/www/html
-    # Sinkronisasi kode yang sama
+  web:
+    image: nginx:1.21-alpine
+    container_name: fdc_web
+    restart: unless-stopped
+    ports:
+      - "8080:80"
     volumes:
-      - .:/var/www/html
-      # Volume anonim untuk node_modules juga disarankan di sini
-      - /var/www/html/node_modules
-    # Perintah default untuk service ini bisa dikosongkan,
-    # karena Anda akan menjalankannya secara manual.
-    command: /bin/true
+      - ./:/var/www/html:ro
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - app
+
+  db:
+    image: mysql:8.0
+    container_name: fdc_db
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: app
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+    volumes:
+      - dbdata:/var/lib/mysql
+    ports:
+      - "3306:3306"
+
+volumes:
+  vendor:
+  node_modules:
+  dbdata:
