--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,12 @@ services:
     environment:
       APP_ENV: local
       APP_DEBUG: 'true'
-      DB_HOST: db
-      DB_PORT: '3306'
-      DB_DATABASE: app
-      DB_USERNAME: root
-      DB_PASSWORD: root
+      API_URL: "http://47.129.32.35:9000"
     volumes:
       - ./:/var/www/html
       - vendor:/var/www/html/vendor
       - node_modules:/app/node_modules
-    depends_on:
-      - db
+    # No local DB; the application communicates with external API
 
   web:
     image: nginx:1.21-alpine
@@ -34,21 +29,7 @@ services:
     depends_on:
       - app
 
-  db:
-    image: mysql:8.0
-    container_name: fdc_db
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: app
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-    volumes:
-      - dbdata:/var/lib/mysql
-    ports:
-      - "3306:3306"
 
 volumes:
   vendor:
   node_modules:
-  dbdata:
